Use message.properties for "Sign up" button

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -567,6 +567,7 @@ screen.welcome.label.email.accesskey=e
 screen.welcome.label.password=<span class="accesskey">P</span>assword
 screen.welcome.label.password.accesskey=p
 screen.welcome.button.login=Sign in
+screen.welcome.button.signup=Sign up
 screen.welcome.checkbox.rememberme=Stay signed in
 screen.welcome.link.resetpassword=Reset password
 screen.welcome.button.orcidlogin=Sign in with ORCiD
