--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -168,7 +168,7 @@ screen.error.page.title.pagenotfound=Error - Page Not Found
 screen.error.page.title.requestunsupported=Error - Unsupported Request
 screen.error.page.accessdenied=Access Denied
 screen.error.page.permissiondenied=You do not have permission to view this page.
-screen.error.page.requestunsupported=The request type or syntax is not supported.
+screen.error.page.requestunsupported=Request Not Supported
 # screen.error.page.loginagain=Login Again
 screen.error.page.notfound=Page Not Found
 screen.error.page.doesnotexist=The page you are attempting to access does not exist at the moment.
