Update institution login page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -608,12 +608,12 @@ screen.institutionlogin.title=Institution SSO
 screen.institutionlogin.heading=Sign in through your institution
 screen.institutionlogin.message.select=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
 screen.institutionlogin.message.auto=Your institution has partnered with OSF. Please continue to sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
-screen.institutionlogin.heading.select=Select your institution
+screen.institutionlogin.heading.select=Your institution
 screen.institutionlogin.heading.auto=Your institution
 screen.institutionlogin.link.select=Not your institution?
 screen.institutionlogin.link.unsupported=I can't find my institution
 screen.institutionlogin.button.submit=Sign in
-screen.institutionlogin.osf=Sign in with your OSF account
+screen.institutionlogin.osf=Sign in with email
 #
 # Unsupported Institution
 #
