--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -760,14 +760,15 @@ screen.institutionssomultipleemailsnotsupported.message=\
 screen.oauth.confirm.title=Approve Access
 screen.oauth.confirm.header=Approve or deny authorization
 screen.oauth.confirm.message=Do you want to grant access to the following service with listed access scopes?
-screen.oauth.confirm.service=Name: {0}
-screen.oauth.confirm.description=Description: {0}
-screen.oauth.confirm.scopes=Scope(s) requested: {0}
+screen.oauth.confirm.service.name=Service Name
+screen.oauth.confirm.service.description=Service Description
+screen.oauth.confirm.service.scopes=Scope(s) Requested
 screen.oauth.confirm.allow=Allow
 screen.oauth.confirm.deny=Deny
 screen.oauth.confirm.backtoosf=Exit and go back to OSF
 screen.oauth.error.title=OAuth Error
 screen.oauth.error.heading=Authorization failed
+screen.oauth.error.detail=Error Detail
 screen.oauth.error.exit=Exit
 #
 # Pac4j Authentication Delegation Error Views
