[ENG-8793] [ENG-8785] [ENG-8793] Remove branded login + Update no service pages + Update OAuth workflow (#98)
* Remove branded login from all affected pages
* Remove fragment osfbannerui and serviceui and their CSS
* Fix 405 language
* Update generic logged-in and logged-out page
* Rework OAuth confirm and error pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -168,7 +168,7 @@ screen.error.page.title.pagenotfound=Error - Page Not Found
 screen.error.page.title.requestunsupported=Error - Unsupported Request
 screen.error.page.accessdenied=Access Denied
 screen.error.page.permissiondenied=You do not have permission to view this page.
-screen.error.page.requestunsupported=The request type or syntax is not supported.
+screen.error.page.requestunsupported=Request Not Supported
 # screen.error.page.loginagain=Login Again
 screen.error.page.notfound=Page Not Found
 screen.error.page.doesnotexist=The page you are attempting to access does not exist at the moment.
@@ -760,14 +760,15 @@ screen.institutionssomultipleemailsnotsupported.message=\
 screen.oauth.confirm.title=Approve Access
 screen.oauth.confirm.header=Approve or deny authorization
 screen.oauth.confirm.message=Do you want to grant access to the following service with listed access scopes?
-screen.oauth.confirm.service=Name: {0}
-screen.oauth.confirm.description=Description: {0}
-screen.oauth.confirm.scopes=Scope(s) requested: {0}
+screen.oauth.confirm.service.name=Service Name
+screen.oauth.confirm.service.description=Service Description
+screen.oauth.confirm.service.scopes=Scope(s) Requested
 screen.oauth.confirm.allow=Allow
 screen.oauth.confirm.deny=Deny
 screen.oauth.confirm.backtoosf=Exit and go back to OSF
 screen.oauth.error.title=OAuth Error
 screen.oauth.error.heading=Authorization failed
+screen.oauth.error.detail=Error Detail
 screen.oauth.error.exit=Exit
 #
 # Pac4j Authentication Delegation Error Views
